2014-10-01  Paul Eggert  <eggert@cs.ucla.edu>

	Use AUTO_CONS instead of SCOPED_CONS, etc.
	* frame.h (AUTO_FRAME_ARG): Rename from FRAME_PARAMETER.
	* lisp.h (AUTO_CONS): Rename from scoped_cons.
	(AUTO_LIST1): Rename from scoped_list1.
	(AUTO_LIST2): Rename from scoped_list2.
	(AUTO_LIST3): Rename from scoped_list3.
	(AUTO_LIST4): Rename from scoped_list4.
	(AUTO_STRING): Rename from SCOPED_STRING.
	* frame.h (AUTO_FRAME_ARG):
	* lisp.h (AUTO_CONS, AUTO_LIST1, AUTO_LIST2, AUTO_LIST3)
	(AUTO_LIST4, AUTO_STRING):
	Prepend a new argument 'name'.
	Declare a variable instead of yielding a value.
	All uses changed.
	* lisp.h (STACK_CONS, AUTO_CONS_EXPR): New internal macros.

	* dispnew.c (adjust_decode_mode_spec_buffer): Prefer ptrdiff_t
	to ssize_t since we're not using ssize_t-related syscalls here.

2014-09-30  Eli Zaretskii  <eliz@gnu.org>

	* w32fns.c (w32_createwindow): Accept an additional argument, an
	array of 2 values specifying the coordinates of the frame's
	top-left corner.  Use these values instead of calling x_get_arg,
	which can cons Lisp objects, and therefore cannot be called except
	from the main thread.  Remove redundant tests for the default
	values.
	(my_create_window): Move the calculation of the coordinates of the
	frame's top-left edge here.  Pass them to the input thread via the
	second parameter of the WM_EMACS_CREATEWINDOW message.  See
	http://lists.gnu.org/archive/html/emacs-devel/2014-09/msg00892.html
	for the details.

2014-09-30  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (cursor_row_fully_visible_p): Update commentary.
	(redisplay_window): Treat the frame's frozen_window_starts flag
	the same way as the optional_new_start flag for the window: only
	obey it if the glyph row showing point will be fully visible.
	Likewise when the window start is in a continuation line.  If,
	after trying everything under the 'force_start' label, point is
	still not fully visible, give up and scroll the window.  Add
	debugging traces.  (Bug#18545)
